# rockin_at_work_software

./: README.md
arm_planner/: CMakeLists.txt  package.xml  readme
arm_planner/action/: arm_planning.action
arm_planner/include/arm_planner/: ArmPlanner.h  control_point.h  obstacle.h  planner.h  utils.h
arm_planner/launch/: planner.launch  planner_viewer.launch  trajectory_generator.launch  webots_ros_interface.launch
arm_planner/msg/: ControlPoint_msg.msg  Obstacle_msg.msg  Obstacles.msg  PlanningSceneFrame.msg  TargetRequest.msg
arm_planner/src/: arm_frame_publisher.cpp  compute_grid.cpp  compute_workspace.cpp  key_for_opengl.cpp  planner.cpp  planner_main.cpp  planner_viewer.cpp  planning_request_node.cpp  planning_request_node_clicked_point.cpp  teleop_omni_key.cpp
arm_planner/src/ws/: kinect.txt  ws_0.txt  ws_30.txt  ws_45.txt  ws_60.txt  ws_75.txt
arm_planner/srv/: check_IK_feasibility.srv  get_ee_pose.srv
youbot_bringup/: CMakeLists.txt  package.xml
youbot_bringup/launch/: youbot_bringup (copy).launch  youbot_bringup.launch  youbot_bringup.launch~
youbot_calibration/: CMakeLists.txt  package.xml
youbot_calibration/launch/: camera_arm_calibration.launch  kinect_arm_calibration.launch
youbot_calibration/src/: camera_arm_calib.cpp  kinect_arm_calib.cpp
youbot_drivers_stack/rpg_youbot_torque_control/ik_solver_service/: CMakeLists.txt  package.xml
youbot_drivers_stack/rpg_youbot_torque_control/torque_control/: CMakeLists.txt
youbot_drivers_stack/rpg_youbot_torque_control/torque_example/: CMakeLists.txt
youbot_drivers_stack/rpg_youbot_torque_control/trajectory_generator/: CMakeLists.txt
youbot_drivers_stack/youbot_driver_ros_interface/: CMakeLists.txt
youbot_drivers_stack/youbot_driver_ros_interface/src/: YouBotOODLWrapper.cpp  youbot_oodl.cpp
youbot_drivers_stack/youbot_driver_ros_interface/srv/: GripperPositions.srv
youbot_holonomic_navigation/holonomic_base_planner/: CMakeLists.txt  package.xml
youbot_holonomic_navigation/holonomic_base_planner/cfg/: dis-A-basement-2011-12-16.ppm  dis-A-basement-2011-12-16.yaml  dis-A-basement-2011-12-16_2.ppm  robot.yaml  willow.yaml  willow_rid.pgm  work_map.yaml  work_map3.ppm
youbot_holonomic_navigation/holonomic_base_planner/config_dwa/: costmap_common_params (another copy).yaml  costmap_common_params.yaml  costmap_common_params_merged.yaml  costmap_common_params_noisy.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params (copy).yaml  move_base_params.yaml
youbot_holonomic_navigation/holonomic_base_planner/include/: utils.h
youbot_holonomic_navigation/holonomic_base_planner/launch/: 2dnav_dwa_mio.launch  amcl.launch  base_planner.launch  base_planner_joy.launch  glocalizer.launch  navigation.launch  navigation_sim.launch
youbot_holonomic_navigation/holonomic_base_planner/launch/merged_scan/: 2dnav_dwa_mio_merged_scan.launch  amcl_merged_scan.launch  base_planner_joy_merged_scan.launch  base_planner_merged_scan.launch  glocalizer_merged_scan.launch  kinect_2_scan.launch  navigation_merged_scan.launch
youbot_holonomic_navigation/holonomic_base_planner/launch/scan_noisy/: 2dnav_dwa_mio_noisy.launch  amcl_noisy.launch  base_planner_joy_noisy.launch  base_planner_noisy.launch  glocalizer_noisy.launch
youbot_holonomic_navigation/holonomic_base_planner/src/: base_planner_ActionServer.cpp  base_scan_noisy.cpp  distance_map.cpp  distance_map2.cpp  holonomic_base_planner_ActionClient.cpp  holonomic_base_planner_ActionServer.cpp  holonomic_base_planner_ActionServer2.cpp  kinect_scan.cpp  multiple_scan_merger.cpp  points_of_interst_extraction.cpp
youbot_holonomic_navigation/holonomic_base_planner/worlds/: dis.world  willow.world  work (copy).world  work.world
youbot_joystick_control/: CMakeLists.txt  package.xml
youbot_joystick_control/launch/: youbot_joystick_control.launch  youbot_joystick_control_arm_only.launch
youbot_joystick_control/src/: youbot_joystick_control.cpp  youbot_joystick_control_arm_only.cpp
youbot_manipulation/: CMakeLists.txt  package.xml
youbot_manipulation/action/: youbot_manipulation.action
youbot_manipulation/include/: next_best_view.h  next_best_view_new.h
youbot_manipulation/launch/: manipulation.launch  manipulation_demo.launch  manipulation_multiviews.launch  manipulation_rockin.launch
youbot_manipulation/src/: youbot_manipulation_client.cpp  youbot_manipulation_client_demo.cpp  youbot_manipulation_client_rockin.cpp  youbot_manipulation_server (another copy).cpp  youbot_manipulation_server (copy).cpp  youbot_manipulation_server.cpp  youbot_manipulation_server_demo.cpp  youbot_manipulation_server_multiviews.cpp  youbot_manipulation_server_multiviews_prima_della_tesi.cpp  youbot_manipulation_server_next_best_view.cpp  youbot_manipulation_server_next_best_view_experiments.cpp  youbot_manipulation_server_rockin.cpp
youbot_navigation/youbot_navigation_common/config/: base_local_planner_params.yaml  costmap_common_params.yaml  (+4 more)
youbot_object_recognition/: CMakeLists.txt  package.xml
youbot_object_recognition/action/: RecognizeObject.action
youbot_object_recognition/include/: mutual_information_utils.h  utils.h
youbot_object_recognition/kinect/: bag1_b_box1.cfg  bag1_b_box1_2.cfg  bag1_b_box2.cfg  bag1_b_box2_2.cfg  bag1_cfg.txt  bag1_grande.cfg  bag1_grande_2.cfg  bag1_motore.cfg  bag1_motore_2.cfg  bag2_b_box1.cfg  bag2_b_box1_2.cfg  bag2_b_box2.cfg  bag2_b_box2_2.cfg  bag2_grande.cfg  bag2_grande_2.cfg  bag2_motore.cfg  bag2_motore_2.cfg  cam_matrix.txt
youbot_object_recognition/launch/: arm_camera.launch  camera.yaml  object_recognition.launch  object_recognition_multiviews.launch  object_recognition_rockin.launch
youbot_object_recognition/src/: arm_camera_object_recognition_multi_server.cpp  arm_camera_object_recognition_server.cpp  arm_camera_object_recognition_server_single_process.cpp  kinect_object_recognition_server.cpp  kinect_object_recognition_server_rockin.cpp  recognition_server.cpp  youbot_object_recognition_client.cpp
youbot_object_recognition/srv/: volume_in_camera_fov.srv
(+30 files in other folders)
